Unit test integrations