@@ -4,12 +4,12 @@ import com.smallworldfs.model.Transaction;
 import com.smallworldfs.service.impl.TransactionService;
 import lombok.RequiredArgsConstructor;
 
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
@@ -21,60 +21,49 @@ public class TransactionDataFetcher {
    * Returns the sum of the amounts of all transactions
    */
   public double getTotalTransactionAmount() {
-    try {
-      return transactionService.getAllTransaction()
-          .stream()
-          .distinct()
-          .mapToDouble(Transaction::amount)
-          .sum();
-    } catch (Exception e) {
-      throw new UnsupportedOperationException();
-    }
+    List<Transaction> transaction = transactionService.getAllTransaction();
+    return transaction.isEmpty() ? 0.0 : transaction
+        .stream()
+        .distinct()
+        .mapToDouble(Transaction::amount)
+        .sum();
   }
 
   /**
    * Returns the sum of the amounts of all transactions sent by the specified client
    */
   public double getTotalTransactionAmountSentBy(String senderFullName) {
-    try {
-      return transactionService.getAllTransaction().stream().distinct()
-          .filter(transaction ->
-              senderFullName.equals(transaction.senderFullName()))
-          .mapToDouble(Transaction::amount)
-          .sum();
-    } catch (Exception e) {
-      throw new UnsupportedOperationException();
-    }
+    List<Transaction> transaction = transactionService.getAllTransaction();
+    return transaction.isEmpty() ? 0.0 : transaction
+        .stream()
+        .distinct()
+        .filter(e -> senderFullName.equals(e.senderFullName()))
+        .mapToDouble(Transaction::amount)
+        .sum();
   }
 
   /**
    * Returns the highest transaction amount
    */
   public double getMaxTransactionAmount() {
-    try {
-      return transactionService.getAllTransaction()
-          .stream()
-          .distinct()
-          .mapToDouble(Transaction::amount)
-          .max()
-          .orElse(0.0);
-    } catch (Exception e) {
-      throw new UnsupportedOperationException();
-    }
+    List<Transaction> transaction = transactionService.getAllTransaction();
+    return transaction.isEmpty() ? 0.0 : transaction
+        .stream()
+        .distinct()
+        .mapToDouble(Transaction::amount)
+        .max()
+        .orElse(0.0);
   }
 
   /**
    * Counts the number of unique clients that sent or received a transaction
    */
   public long countUniqueClients() {
-    try {
-      return transactionService.getAllTransaction()
-          .stream()
-          .distinct()
-          .count();
-    } catch (Exception e) {
-      throw new UnsupportedOperationException();
-    }
+    List<Transaction> transaction = transactionService.getAllTransaction();
+    return transaction.isEmpty() ? 0 : transaction
+        .stream()
+        .distinct()
+        .count();
   }
 
   /**
@@ -82,82 +71,75 @@ public class TransactionDataFetcher {
    * issue that has not been solved
    */
   public boolean hasOpenComplianceIssues(String clientFullName) {
-    throw new UnsupportedOperationException();
+    List<Transaction> transaction = transactionService.getAllTransaction();
+    return transaction.isEmpty() ? Boolean.FALSE : transaction
+        .stream()
+        .anyMatch(e -> (e.senderFullName().equals(clientFullName) ||
+            e.beneficiaryFullName().equals(clientFullName)) &&
+            e.issueSolved().equals(Boolean.FALSE));
   }
 
   /**
    * Returns all transactions indexed by beneficiary name
    */
-  public Map<String, Transaction> getTransactionsByBeneficiaryName() {
-    try {
-      return transactionService.getAllTransaction()
-          .stream()
-          .collect(Collectors.toMap(Transaction::beneficiaryFullName, Function.identity()));
-    } catch (Exception e) {
-      throw new UnsupportedOperationException();
-    }
+  public Map<String, List<Transaction>> getTransactionsByBeneficiaryName() {
+    List<Transaction> transaction = transactionService.getAllTransaction();
+    return transaction.isEmpty() ? Collections.emptyMap() : transaction
+        .stream().collect(Collectors.groupingBy(Transaction::beneficiaryFullName));
   }
 
   /**
    * Returns the identifiers of all open compliance issues
    */
   public Set<Integer> getUnsolvedIssueIds() {
-    try {
-      return transactionService.getAllTransaction()
-          .stream()
-          .filter(transaction -> Boolean.FALSE.equals(transaction.issueSolved()))
-          .map(Transaction::issueId)
-          .collect(Collectors.toSet());
-    } catch (Exception e) {
-      throw new UnsupportedOperationException();
-    }
+    List<Transaction> transaction = transactionService.getAllTransaction();
+    return transaction.isEmpty() ? Collections.emptySet() : transaction
+        .stream()
+        .filter(e -> Boolean.FALSE.equals(e.issueSolved()) && e.issueId() != null)
+        .map(Transaction::issueId)
+        .collect(Collectors.toSet());
   }
 
   /**
    * Returns a list of all solved issue messages
    */
   public List<String> getAllSolvedIssueMessages() {
-    try {
-      return transactionService.getAllTransaction()
-          .stream()
-          .filter(transaction -> Boolean.TRUE.equals(transaction.issueSolved()))
-          .map(Transaction::issueMessage)
-          .collect(Collectors.toList());
-    } catch (Exception e) {
-      throw new UnsupportedOperationException();
-    }
+    List<Transaction> transaction = transactionService.getAllTransaction();
+    return transaction.isEmpty() ? Collections.emptyList() : transaction
+        .stream()
+        .filter(e -> Boolean.TRUE.equals(e.issueSolved()) && !(e.issueMessage().isEmpty()))
+        .map(Transaction::issueMessage)
+        .toList();
   }
 
   /**
    * Returns the 3 transactions with the highest amount sorted by amount descending
    */
   public List<Transaction> getTop3TransactionsByAmount() {
-    try {
-      return transactionService.getAllTransaction()
-          .stream()
-          .distinct()
-          .sorted(Comparator.comparingDouble(Transaction::amount).reversed())
-          .limit(3)
-          .toList();
-    } catch (Exception e) {
-      throw new UnsupportedOperationException();
-    }
+    List<Transaction> transaction = transactionService.getAllTransaction();
+    return transaction.isEmpty() ? Collections.emptyList() : transaction
+        .stream()
+        .distinct()
+        .sorted(Comparator.comparingDouble(Transaction::amount).reversed())
+        .limit(3)
+        .toList();
   }
 
   /**
    * Returns the senderFullName of the sender with the most total sent amount
    */
   public Optional<String> getTopSender() {
-    try {
-      Map<String, Double> topSenderMap = transactionService.getAllTransaction()
-          .stream().collect(Collectors.
-              groupingBy(Transaction::senderFullName, Collectors.summingDouble(Transaction::amount)));
-      return topSenderMap.entrySet().stream()
-          .max(Comparator.comparingDouble(Map.Entry::getValue))
-          .map(Map.Entry::getKey);
-    } catch (Exception e) {
-      throw new UnsupportedOperationException();
-    }
+    List<Transaction> transaction = transactionService.getAllTransaction();
+
+    if (transaction.isEmpty())
+      return Optional.empty();
+
+    Map<String, Double> topSenderMap = transactionService.getAllTransaction()
+        .stream().collect(Collectors.
+            groupingBy(Transaction::senderFullName, Collectors.summingDouble(Transaction::amount)));
+    return topSenderMap.entrySet().stream()
+        .max(Comparator.comparingDouble(Map.Entry::getValue))
+        .map(Map.Entry::getKey);
   }
 
 }
